# brent-cogs

./: .gitignore  README.md  info.json  pyproject.toml
nuke/: __init__.py  info.json  nuke.py
recorder/: __init__.py  info.json  recorder.py
snitch/: __init__.py  info.json  snitch.py
